[package]
name = "process_monitor"
version = "0.1.0"
edition = "2021"
authors = ["David Mitchell <davidm@digital-shokunin.net"]
description = "A simple process monitor"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
aya = "0.12.0"
aya-log = "0.2.0"
csv = "1.3.0"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
anyhow = "1.0.82"