[package]
name = "process_monitor_ebpf"
version = "0.1.0"
edition = "2021"
authors = ["David Mitchell <davidm@digital-shokunin.net"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aya = "0.12.0"
aya-log-ebpf = "0.1.0"
aya-ebpf = "0.1.0"
#csv = "1.3.0"
#tokio = { version = "1.37.0", features = ["full"] }
#env_logger = "0.11.3"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"

[profile.bench]
panic = "abort"

[profile.default]
panic = "abort"