[package]
name = "process_monitor_ebpf"
version = "0.1.0"
edition = "2021"
authors = ["David Mitchell <davidm@digital-shokunin.net"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aya = "0.12.0"
aya-log-ebpf = "0.1.0"
aya-ebpf = "0.1.0"
xtask = "0.1.0"
#csv = "1.3.0"
#tokio = { version = "1.37.0", features = ["full"] }
#env_logger = "0.11.3"

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false


[build]
rustflags = ["-C", "panic=abort"]

[[bin]]
name = "process_monitor_ebpf"
path = "src/main.rs"
emit = "object"
